# SFML_basic_3d_renderer

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  compile.bat  debug.cpp  debug.h  import.cpp  import.h  input.cpp  input.h  light.h  main.cpp  mesh.cpp  mesh.h  plan.txt  primitives.cpp  primitives.h  transform.cpp  transform.h  triangle.cpp  triangle.h  vertex.h  vmath.h
objects/: amogus.fbx
